--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.15.3",
-    "iview": "^2.7.4",
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "vue-i18n": "^5.0.3",
-    "vuex": "^2.2.1",
+    "clipboard": "^1.5.12",
     "echarts": "^3.4.0",
+    "iview": "^2.7.4",
     "js-cookie": "^2.1.3",
-    "clipboard": "^1.5.12"
+    "mockjs": "^1.0.1-beta3",
+    "vue": "^2.5.2",
+    "vue-i18n": "^5.0.3",
+    "vue-router": "^3.0.1",
+    "vuex": "^2.2.1"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
